--- a/misc/install
+++ b/misc/install
@@ -13,10 +13,6 @@ TARGET_DISK="/dev/sda"
 
 [[ -d "/sys/firmware/efi" ]] && BOOT_TYPE="UEFI" || BOOT_TYPE="LEGACY"
 
-echo $BOOT_TYPE
-
-exit 0
-
 [[ "$BOOT_TYPE" == "UEFI" ]] && BOOT_DISK_SIZE="+300M"
 [[ "$BOOT_TYPE" == "LEGACY" ]] && BOOT_DISK_SIZE="+1M"
 
@@ -31,7 +27,7 @@ sgdisk -Z $TARGET_DISK
 sgdisk -a 2048 -o $TARGET_DISK
 
 if [[ "$BOOT_TYPE" == "UEFI" ]]; then
-    sgdisk -n 1::$DISK_SIZE --typecode=1:ef00 --change-name=1:'BOOT' $TARGET_DISK
+    sgdisk -n 1::$BOOT_DISK_SIZE --typecode=1:ef00 --change-name=1:'BOOT' $TARGET_DISK
     sgdisk -n 2::-0 --typecode=2:8300 --change-name=2:'ROOT' $TARGET_DISK
 elif [[ "$BOOT_TYPE" == "LEGACY" ]]; then
     sgdisk -n 1::-0 --typecode=1:8300 --change-name=1:'ROOT' $TARGET_DISK
