--- a/misc/install
+++ b/misc/install
@@ -15,12 +15,12 @@ sgdisk -a 2048 -o /dev/sda
 sgdisk -n 1::+300 --typecode=1:ef00 --change-name=1:'BOOT' /dev/sda
 sgdisk -n 2::-0 --typecode=2:8300 --change-name=2:'ROOT' /dev/sda
 
-mkdir -p /mnt/boot
-mkfs.ex4 /dev/sda1
-mount /dev/sda1 /mnt/boot
-
-mkfs.ext4 /dev/sda2
+mkfs.ex4 /dev/sda2
 mount /dev/sda2 /mnt
+
+mkdir -p /mnt/boot/efi
+mkfs.fat -F32 /dev/sda1
+mount /dev/sda1 /mnt/boot/efi
 
 pacstrap /mnt base base-devel linux-lts linux-firmware
 
@@ -28,4 +28,5 @@ genfstab -U /mnt >> /mnt/etc/fstab
 
 cat /mnt/etc/fstab
 
+cp chroot /mnt
 arch-chroot /mnt ./chroot
