--- a/misc/install
+++ b/misc/install
@@ -12,7 +12,7 @@ wipefs --all --force /dev/sda
 sgdisk -Z /dev/sda
 sgdisk -a 2048 -o /dev/sda
 
-sgdisk -n 1::+300 --typecode=1:ef00 --change-name=1:'BOOT' /dev/sda
+sgdisk -n 1::+300M --typecode=1:ef00 --change-name=1:'BOOT' /dev/sda
 sgdisk -n 2::-0 --typecode=2:8300 --change-name=2:'ROOT' /dev/sda
 
 mkfs.ex4 /dev/sda2
