--- a/misc/install
+++ b/misc/install
@@ -15,6 +15,7 @@ sgdisk -a 2048 -o /dev/sda
 sgdisk -n 1::+300M --typecode=1:ef00 --change-name=1:'BOOT' /dev/sda
 sgdisk -n 2::-0 --typecode=2:8300 --change-name=2:'ROOT' /dev/sda
 
+mkdir -p /mnt/boot
 mkfs.ex4 /dev/sda2
 mount /dev/sda2 /mnt
 
