--- a/misc/install
+++ b/misc/install
@@ -12,18 +12,17 @@ wipefs --all --force /dev/sda
 sgdisk -Z /dev/sda
 sgdisk -a 2048 -o /dev/sda
 
-sgdisk -n 1::+300M --typecode=1:ef00 --change-name=1:'BOOT' /dev/sda
+sgdisk -n 1::+512M --typecode=1:ef00 --change-name=1:'BOOT' /dev/sda
 sgdisk -n 2::-0 --typecode=2:8300 --change-name=2:'ROOT' /dev/sda
-
-mkdir -p /mnt/boot/efi
 
 mkfs.fat -F32 /dev/sda1
 mkfs.ext4 /dev/sda2
 
 mount /dev/sda2 /mnt
-mount /dev/sda1 /mnt/boot/efi
+mkdir -p /mnt/boot
+mount /dev/sda1 /mnt/boot
 
-pacstrap /mnt base base-devel linux-lts linux-firmware
+pacstrap /mnt base linux linux-firmware
 
 genfstab -U /mnt >> /mnt/etc/fstab
 
