--- a/misc/install
+++ b/misc/install
@@ -19,8 +19,8 @@ mkfs.fat -F32 /dev/sda1
 mkfs.ext4 /dev/sda2
 
 mount /dev/sda2 /mnt
-mkdir -p /mnt/boot
-mount /dev/sda1 /mnt/boot
+mkdir -p /mnt/boot/efi
+mount /dev/sda1 /mnt/boot/efi
 
 pacstrap /mnt base linux linux-firmware
 
