--- a/misc/install
+++ b/misc/install
@@ -32,6 +32,42 @@ read -p "Check if /boot/efi created"
 
 pacstrap /mnt base base-devel linux linux-firmware linux-headers grub efibootmgr os-prober
 
+# -- test -- #
+pacstrap -i /mnt --noconfirm --needed NetworkManager dhcpcd iwd
+
+echo scrubs > /etc/hostname
+
+ln -sf /mnt/usr/share/zoneinfo/Asia/Manila  /mnt/etc/localtime
+
+echo "
+    127.0.0.1 localhost
+    ::        localhost
+    127.0.1.1  scrubs.localdomain scrubs" > /mnt/etc/hosts
+
+sed -i 's/# %wheel ALL=(ALL) ALL/%wheel ALL=(ALL) ALL/g' /mnt/etc/sudoers
+echo "scrubs ALL=(ALL) ALL" >> /mnt/etc/sudoers
+
+sed -i "s/#\[multilib]/[multilib]/" /mnt/etc/pacman.conf
+sed -i "$!N;s/\(\[multilib]\n\)#\(Include\)/\1\2/;P;D" /mnt/etc/pacman.conf
+
+swap_size="2g"
+
+echo "
+[Unit]
+Description=zRam block devices swapping
+
+[Service]
+Type=oneshot
+ExecStart=/usr/bin/bash -c 'modprobe zram && echo lz4 > /sys/block/zram0/comp_algorithm && echo ${swap_size} > /sys/block/zram0/disksize && mkswap --label zram0 /dev/zram0 && swapon --priority 100 /dev/zram0'
+ExecStop=/usr/bin/bash -c 'swapoff /dev/zram0 && rmmod zram'
+RemainAfterExit=yes
+
+[Install]
+WantedBy=multi-user.target
+
+" > /mnt/etc/systemd/system/zram-swap.service
+
+
 genfstab -U /mnt >> /mnt/etc/fstab
 
 cp ./chroot /mnt
