rid 1 pause and uncomment setfont

--- a/misc/legacy/install
+++ b/misc/legacy/install
@@ -1,5 +1,5 @@
 loadkeys en
-setfont ter-132b
+#setfont ter-132b
 timedatectl
 
 umount -a
@@ -65,7 +65,6 @@ WantedBy=multi-user.target
 
 ls /mnt/etc/systemd/system | grep "zram-swap.service"
 cat /mnt/etc/systemd/system/zram-swap.service
-read -p ""
 
 genfstab -U /mnt >> /mnt/etc/fstab
 
