--- a/misc/uefi/install
+++ b/misc/uefi/install
@@ -24,7 +24,7 @@ mount /dev/sda2 /mnt
 mkdir -p /mnt/boot/efi
 mount /dev/sda1 /mnt/boot/efi
 
-pacstrap /mnt base base-devel linux linux-firmware linux-headers grub efibootmgr os-prober
+pacstrap /mnt --noconfirm --needed base base-devel linux linux-firmware linux-headers grub efibootmgr os-prober
 
 # -- test -- #
 pacstrap -i /mnt --noconfirm --needed NetworkManager dhcpcd iwd
@@ -33,7 +33,6 @@ echo scrubs > /mnt/etc/hostname
 
 ls /mnt/etc | grep "host"
 cat /mnt/etc/host
-read -p ""
 
 ln -sf /mnt/usr/share/zoneinfo/Asia/Manila  /mnt/etc/localtime
 
@@ -44,7 +43,6 @@ echo "
 
 ls /mnt/etc | grep "hosts"
 cat /mnt/etc/hosts
-read -p ""
 
 sed -i 's/# %wheel ALL=(ALL) ALL/%wheel ALL=(ALL) ALL/g' /mnt/etc/sudoers
 
@@ -52,7 +50,6 @@ echo "scrubs ALL=(ALL) ALL" >> /mnt/etc/sudoers
 
 ls /mnt/etc | grep "sudoers"
 cat /mnt/etc/sudoers
-read -p ""
 
 
 sed -i "s/#\[multilib]/[multilib]/" /mnt/etc/pacman.conf
@@ -60,7 +57,6 @@ sed -i "$!N;s/\(\[multilib]\n\)#\(Include\)/\1\2/;P;D" /mnt/etc/pacman.conf
 
 ls /mnt/etc | grep "pacman.conf"
 cat /mnt/etc/pacman.conf
-read -p ""
 
 swap_size="2g"
 
