--- a/misc/bios/install
+++ b/misc/bios/install
@@ -7,7 +7,9 @@ swapoff -a
 wipefs --all --force /dev/sda
 
 sgdisk -Z /dev/sda
-sgdisk -n 1::-0 --typecode=1:8304 --change-name=1:'ROOT' /dev/sda
+sgdisk -n 1::+1M --typecode=1:ef02 --change-name=1:'BOOT' /dev/sda
+# sgdisk -n 2::-0 --typecode=2:8300 --change-name=2:'ROOT' /dev/sda -- pc bonbon desktop
+sgdisk -n 2::-0 --typecode=2:8300 --change-name=2:'ROOT' /dev/sda
 
 mkfs.ext4 /dev/sda1
 
