--- a/misc/bios/install
+++ b/misc/bios/install
@@ -2,7 +2,7 @@ loadkeys en
 #setfont ter-132b
 timedatectl
 
-umount -a
+umount -A --recursive /mnt
 swapoff -a
 wipefs --all --force /dev/sda
 
@@ -11,9 +11,9 @@ sgdisk -n 1::+1M --typecode=1:ef02 --change-name=1:'BOOT' /dev/sda
 # sgdisk -n 2::-0 --typecode=2:8300 --change-name=2:'ROOT' /dev/sda -- pc bonbon desktop
 sgdisk -n 2::-0 --typecode=2:8300 --change-name=2:'ROOT' /dev/sda
 
-mkfs.ext4 /dev/sda1
+mkfs.ext4 /dev/sda2
 
-mount /dev/sda1 /mnt
+mount /dev/sda2 /mnt
 
 pacstrap -i /mnt --noconfirm --needed base base-devel linux linux-firmware vim grub
 
