added encript drive feature

--- a/misc/uefi/install
+++ b/misc/uefi/install
@@ -1,33 +1,16 @@
 #!/bin/bash
 
+ENCRYPT_DRIVE=true
 [ -d /sys/firmware/efi/efivars ] && BOOT_TYPE="UEFI" || BOOT_TYPE="LEGACY"
 
 loadkeys en
 # setfont ter-132b
 timedatectl
 
-umount -A --recursive /mnt
-swapoff -a
-wipefs --all --force /dev/sda
-
-sgdisk -Z /dev/sda
-sgdisk -a 2048 -o /dev/sda
-
-sgdisk -n 1::+512M --typecode=1:ef00 --change-name=1:'BOOT' /dev/sda
-# sgdisk -n 2::-0 --typecode=2:8300 --change-name=2:'ROOT' /dev/sda -- pc bonbon desktop
-sgdisk -n 2::-0 --typecode=2:8304 --change-name=2:'ROOT' /dev/sda
-
-mkfs.fat -F32 /dev/sda1
-mkfs.ext4 /dev/sda2
-
-mount /dev/sda2 /mnt
-
-mkdir -p /mnt/boot/efi
-mount /dev/sda1 /mnt/boot/efi
+if [[ "$ENCRYPT_DRIVE" == true ]] && ./partition_drive/encrypt || ./partition_drive/normal
 
 pacstrap /mnt --noconfirm --needed base base-devel linux linux-firmware linux-headers grub efibootmgr os-prober
 
-# -- test -- #
 pacstrap -i /mnt --noconfirm --needed NetworkManager dhcpcd iwd
 
 echo scrubs > /mnt/etc/hostname
@@ -42,7 +25,7 @@ echo "
     ::        localhost
     127.0.1.1  scrubs.localdomain scrubs" > /mnt/etc/hosts
 
-ls /mnt/etc | grep "hosts"
+ls /mnt/etc/hosts
 cat /mnt/etc/hosts
 
 sed -i 's/# %wheel ALL=(ALL) ALL/%wheel ALL=(ALL) ALL/g' /mnt/etc/sudoers
